<resources>
    <string name="app_name">悦影</string>
    <string name="classiy">分类</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="my_note">我的影评</string>
    <string name="inputName">请输入登录昵称</string>
    <string name="inputPassword">请输入登录密码</string>
    <string name="btnLogin">登录</string>
    <string name="btn_register">注册</string>
    <string name="mine_title">~记录你的评论吧~</string>
    <string name="mine_btn">添加我的影评</string>
    <string name="wait">wait...</string>
    <string name="sentence">~ 精选电影台词 ~</string>
    <string name="search">搜索你的电影</string>
    <string name="brk">刷新</string>

</resources>
