<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--3 frament页面,用LinearLayout-->
    <fragment
        android:id="@+id/frag_classify"
        android:name="com.finalwork.mywork.ClassifyFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />
    <fragment
            android:id="@+id/frag_home"
        android:name="com.finalwork.mywork.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"/>
    <fragment
        android:id="@+id/frag_myNote"
        android:name="com.finalwork.mywork.MineFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <RadioGroup
        android:id="@+id/bottom_Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_classify"
            style="@style/my_style"
            android:drawableTop="@drawable/ic_view_list_black_24dp"
            android:text="@string/classiy" />
        <RadioButton
            android:id="@+id/radio_home"
            style="@style/my_style"
            android:drawableTop="@drawable/ic_pets_black_24dp"
            android:text="@string/home" />
        <RadioButton
            android:id="@+id/radio_myNote"
            style="@style/my_style"
            android:drawableTop="@drawable/ic_mood_black_24dp"
            android:text="@string/mine" />
    </RadioGroup>

</LinearLayout>